--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,11 @@ input::placeholder {
     margin-bottom: 3rem;
   }
   
+
+  .fade {
+    transition: opacity 0.5s ease;
+  }
+
+  .c-acord {
+    transition: display 0.5 ease;
+  }
